--- a/res/layout/smsloc.xml
+++ b/res/layout/smsloc.xml
@@ -1,36 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <TextView  
+    <TextView 
+        android:id="@+id/lblPhone" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:text="Enter the phone number of recipient"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignParentTop="true"
         />     
     <EditText 
         android:id="@+id/txtPhoneNo"  
-        android:layout_width="fill_parent" 
-        android:layout_height="wrap_content"        
+        android:layout_width="200dp" 
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lblPhone"        
         />
-    <TextView  
+    
+    <Button 
+        android:id="@+id/btnSelContact"  
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"
+        android:text="..."
+        android:layout_below="@id/lblPhone" 
+        android:layout_toRightOf="@id/txtPhoneNo"
+        />
+    
+    <Button 
+        android:id="@+id/btnDelContact"  
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"
+        android:text=" X "
+        android:layout_below="@id/lblPhone" 
+        android:layout_toRightOf="@id/btnSelContact"
+        />
+    
+    <TextView 
+        android:id="@+id/lblMessage" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"         
         android:text="Message"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@id/txtPhoneNo"
         />     
     <EditText 
         android:id="@+id/txtMessage"  
         android:layout_width="fill_parent" 
         android:layout_height="150px"
-        android:gravity="top"         
+        android:gravity="top"
+        android:layout_below="@id/lblMessage"         
         />          
     <Button 
         android:id="@+id/btnSendSMS"  
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:text="Send SMS"
+        android:layout_below="@id/txtMessage"
         />    
-</LinearLayout>
+</RelativeLayout>
